# a-share-screener

./: .gitignore  README.md  pyproject.toml
architecture/: 插件化集成 KHunter-InStock 因子与策略.md  插件化集成 Sequoia-X 策略.md
backend/: .env.example  __init__.py  main.py  pipeline.py  requirements.txt
backend/advisor/: service.py
backend/api/: routes.py
backend/backtest/: rolling.py  simple.py
backend/config/: __init__.py
backend/core/: config.py
backend/data/: akshare_provider.py  baostock_client.py  factory.py  generate_static_industry_map.py  mock_provider.py  price_service.py  provider.py  static_industry_map.json  static_sector_map.json  tushare_client.py  us_provider.py
backend/database/: connection.py  init_db.py  models.py
backend/filters/: engine.py
backend/plugins/: __init__.py  adapter.py  base.py  data_service.py  indicators.py  patterns.py  registry.py  rps.py  sequoia_strategies.py  stock_scanner.py  strategies.py
backend/quality/: engine.py
backend/scheduler/: daily_job.py
backend/scoring/: engine.py
backend/scripts/: evaluate_plugins.py  warm_prices.py
backend/tests/: test_filters.py  test_pipeline_plugins.py  test_plugins.py  test_rolling_backtest.py  test_scoring.py  test_sequoia_plugins.py  test_stock_scanner.py
deploy/: Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  nginx.conf
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend-astro/: .gitignore  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
project-log/: AkShare 数据完整性提升.md
(+48 files in other folders)
